# AI_Library

./: AI_Library.cpp  AI_Library.h  CMakeLists.txt
src/: CMakeLists.txt
src/ML/: linearRegression.cpp  linearRegression.h
src/common/: CMakeLists.txt  Tensor.cpp  Tensor.h  linalg.cpp  linalg.h
