# CMakeList.txt : CMake project for AI_Library, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AI_Library")

# Add source to this project's executable.
add_executable (AI_Library "AI_Library.cpp" "AI_Library.h")

# TODO: Add tests and install targets if needed.
